@@ -1,3 +1,11 @@
+Sat Jul 08 12:14:00 BST 2000 Olly Betts
+
+	* omindex: Put title in index; limit sample to around 300 characters;
+	  translate common entities e.g. "&lt;" -> "<"; lowercase and stem
+	  terms
+
+	* omega: $topdoc changed to return "0" instead of "" for first page
+
 Fri Jul 07 11:54:00 BST 2000 Olly Betts
 
 	* omega: added omindex - simple web site indexer
